<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="300px"
            android:src="@drawable/profil" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="26dp"
            android:layout_marginRight="26dp"
            android:orientation="vertical"
            android:padding="10dp">


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="35dp"
                        android:padding="5dp"
                        android:text="@string/nama"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=":"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:padding="5dp"
                        android:text="@string/reza"
                        android:textColor="@android:color/black" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:padding="5dp"
                        android:text="@string/alamat"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=":"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:padding="5dp"
                        android:text="@string/banyu"
                        android:textColor="@android:color/black" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:padding="5dp"
                        android:text="@string/hobi"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=":"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:padding="5dp"
                        android:text="@string/main_game"
                        android:textColor="@android:color/black" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:padding="5dp"
                        android:text="@string/quate"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=":"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:padding="5dp"
                        android:text="@string/skuyliving"
                        android:textColor="@android:color/black" />

                </TableRow>
            </TableLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>